Bug 780993 - Reinstate support for setting indexed properties on HTMLSelectElement to null; r=bz